# ponderada-hermano-03-06

./: .gitignore  PROJECT_BASE.md  README.md  experiment_config.json  pyproject.toml
.github/workflows/: ci-metrics.yml
charts/: chart_summary.md
data/: pipeline_metrics.csv  pipeline_metrics.json  pipeline_run_summary.csv  pipeline_run_summary.json  pipeline_stats.json
reports/: checklist.md  relatorio.md
scripts/: ci_step.py  collect_metrics.py  enforce_ci_status.py  generate_charts.py  read_experiment_config.py  summarize_tests.py
src/pipeline_lab/: __init__.py  calculator.py
src/sample/: __init__.py  simple.py
tests/: test_calculator.py  test_sample.py
